Name:                   hie-bios
Version:                0.0.0
Author:                 Kazu Yamamoto <kazu@iij.ad.jp> and Matthew Pickering <matthewtpickering@gmail.com>
Maintainer:             Matthew Pickering <matthewtpickering@gmail.com>
License:                BSD3
License-File:           LICENSE
Homepage:               https://github.com/mpickering/hie-bios
Synopsis:               Set up a GHC API session
Description:

Category:               Development
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     ChangeLog

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  HS-Source-Dirs:       lib
  Exposed-Modules:      Hhp
  Other-Modules:
                        Hhp.Check
                        Hhp.Cradle
                        Hhp.Debug
                        Hhp.Flag
                        Hhp.GHCApi
                        Hhp.Gap
                        Hhp.Doc
                        Hhp.Logger
                        Hhp.Lang
                        Hhp.Types
                        Hhp.Things
  Build-Depends:        base >= 4.9 && < 5
                      , Cabal >= 1.24
                      , containers
                      , deepseq
                      , directory
                      , filepath
                      , ghc
                      , hlint >= 1.8.61
                      , io-choice
                      , process
                      , syb
  if impl(ghc < 8.2)
    Build-Depends:      ghc-boot

Executable hhpc
  Default-Language:     Haskell2010
  Main-Is:              hhpc.hs
  Other-Modules:        Paths_hie_bios
  GHC-Options:          -Wall
  HS-Source-Dirs:       src
  Build-Depends:        base >= 4.9 && < 5
                      , directory
                      , filepath
                      , ghc
                      , hie-bios

Source-Repository head
  Type:                 git
  Location:             git://github.com/mpickering/hie-bios.git
